--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="flex flex-col h-100vh">
+    <main id="app" class="absolute flex inset-0"></main> 
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
